<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.view.fragments.HelpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="16dp"
            android:text="@string/about_the_project"
            android:textColor="@color/low_white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:text="@string/about_the_project_desc"
            android:textColor="@color/low_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:text="@string/about_the_developer"
            android:textColor="@color/low_white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:text="@string/about_the_developer_desc"
            android:textColor="@color/low_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="16dp"
            android:text="@string/contact"
            android:textColor="@color/low_white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:text="@string/contact_desc"
            android:textColor="@color/low_white" />

        <Button
            android:id="@+id/button_linkedin"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:backgroundTint="#0A66C2"
            android:paddingHorizontal="24dp"
            android:textSize="16sp"
            android:text="@string/linkedin"
            android:textAllCaps="false"
            app:icon="@drawable/ic_linkedin" />

        <Button
            android:id="@+id/button_github"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#161B22"
            android:textSize="16sp"
            android:paddingHorizontal="24dp"
            android:text="@string/github"
            android:textAllCaps="false"
            app:icon="@drawable/ic_github" />

    </LinearLayout>

</ScrollView>