<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.SignUpFragment">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/back_to_signin_screen"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/signup_now"
        android:textColor="@color/low_white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_back" />

    <TextView
        android:id="@+id/text_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/quickly_and_free"
        android:textColor="@color/low_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_1" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="no"
        android:background="@drawable/input_text_style_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/low_white"
        android:textColorHint="@color/low_white"
        app:chainUseRtl="true"
        app:layout_constraintBottom_toTopOf="@id/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="nomesobrenome@email.com" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="no"
        android:background="@drawable/input_text_style_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/low_white"
        android:textColorHint="@color/low_white"
        app:layout_constraintBottom_toTopOf="@id/input_confirm_password"
        app:layout_constraintEnd_toEndOf="@id/input_email"
        app:layout_constraintStart_toStartOf="@id/input_email"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        tools:text="12345678" />

    <EditText
        android:id="@+id/input_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="no"
        android:background="@drawable/input_text_style_background"
        android:hint="@string/confim_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/low_white"
        android:textColorHint="@color/low_white"
        app:layout_constraintBottom_toTopOf="@id/button_email_signup"
        app:layout_constraintEnd_toEndOf="@id/input_email"
        app:layout_constraintStart_toStartOf="@id/input_email"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        tools:text="12345678" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_email_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/button_style_background"
        android:paddingHorizontal="64dp"
        android:paddingVertical="12dp"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_confirm_password" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="invisible"
        tools:visibility="visible"
        android:indeterminateTint="@color/low_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/application_credits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_email_signup" />

    <TextView
        android:id="@+id/application_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/application_credits"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>