<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.SignInFragment">

    <TextView
        android:id="@+id/text_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hello_again"
        android:textColor="@color/low_white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/were_happy_to_see_you_again"
        android:textColor="@color/low_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_1" />

    <Button
        android:id="@+id/button_google_signin"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4385F3"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        app:chainUseRtl="true"
        app:icon="@drawable/ic_google"
        app:layout_constraintBottom_toTopOf="@id/view_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/view_divide"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:background="@color/color_secondary"
        app:layout_constraintBottom_toTopOf="@id/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_google_signin" />

    <TextView
        android:id="@+id/text_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:paddingHorizontal="16dp"
        android:text="@string/or"
        android:textColor="@color/low_white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/view_divide"
        app:layout_constraintEnd_toEndOf="@id/view_divide"
        app:layout_constraintStart_toStartOf="@id/view_divide"
        app:layout_constraintTop_toTopOf="@id/view_divide" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:background="@drawable/input_text_style_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/low_white"
        android:textColorHint="@color/low_white"
        app:layout_constraintBottom_toTopOf="@id/input_password"
        app:layout_constraintEnd_toEndOf="@id/view_divide"
        app:layout_constraintStart_toStartOf="@id/view_divide"
        app:layout_constraintTop_toBottomOf="@id/view_divide"
        tools:text="nomesobrenome@email.com" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="no"
        android:background="@drawable/input_text_style_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/low_white"
        android:textColorHint="@color/low_white"
        app:layout_constraintBottom_toTopOf="@id/button_email_signin"
        app:layout_constraintEnd_toEndOf="@id/view_divide"
        app:layout_constraintStart_toStartOf="@id/view_divide"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        tools:text="12345678" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_email_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/button_style_background"
        android:paddingHorizontal="64dp"
        android:paddingVertical="12dp"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@color/color_primary"
        app:layout_constraintBottom_toTopOf="@id/button_signup_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password" />

    <TextView
        android:id="@+id/button_signup_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account_click_here"
        android:textColor="@color/low_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_email_signin" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/low_white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/application_credits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_signup_account"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/application_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/application_credits"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>